RESOLVED FIXED270999
Media Capability may not be created for a web page after process swap
https://bugs.webkit.org/show_bug.cgi?id=270999
Summary Media Capability may not be created for a web page after process swap
youenn fablet
Reported 2024-03-14 12:55:02 PDT
Media Capability may not be created for all documents
Attachments
youenn fablet
Comment 1 2024-03-14 12:55:10 PDT
youenn fablet
Comment 2 2024-03-14 13:28:32 PDT
EWS
Comment 3 2024-03-15 16:02:04 PDT
Committed 276211@main (58512c972d46): <https://commits.webkit.org/276211@main> Reviewed commits have been landed. Closing PR #25899 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.